--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {},
     "autoload": {
         "psr-4": {
-            "SNSOAuth\\": "src/SNSOAuth"
+            "SNSOAuth\\": "src/SNSOAuth",
+        }
     }
-}
 }
